--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Login</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body>
   <!-- Hotel name -->
@@ -15,16 +15,16 @@
   <!-- Login form -->
   <div class="signup-container">
     <h2>Login to Your Account</h2>
-    <form>
+    <form action="/" method="POST">
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter email" required>
+      <input type="email" name="email" id="email" placeholder="Enter email" required>
 
       <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter password" required>
+      <input type="password" name="password" id="password" placeholder="Enter password" required>
 
       <button type="submit">Login</button>
     </form>
-    <p class="login-link">Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <p class="login-link">Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></p>
   </div>
 </body>
 </html>
