--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Sign Up</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body>
   <!-- Hotel name on top -->
@@ -14,24 +14,23 @@
 
   <div class="signup-container">
     <h2>Create Account</h2>
-    <form>
+    <form action="/signup" method="POST">
       <label for="username">Username</label>
-      <input type="text" id="username" placeholder="Enter Username" required>
+      <input type="text" name="username" id="username" placeholder="Enter Username" required>
 
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter Email" required>
-
+      <input type="email" name="email" id="email" placeholder="Enter Email" required>
       <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter Password" required>
+      <input type="password" name="password" id="password" placeholder="Enter Password" required>
 
       <label for="contact details">contact details</label>
-      <input type="number" id="contact details" placeholder="Enter Contact Details" required>
+      <input type="number" name="phone" id="contact details" placeholder="Enter Contact Details" required>
 
 
 
       <button type="submit">Sign Up</button>
     </form>
-    <p class="login-link">Already have an account? <a href="login.html">Log in</a></p>
+    <p class="login-link">Already have an account? <a href="{{ url_for('login') }}">Log in</a></p>
   </div>
 </body>
 </html>
