--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,19 +38,19 @@
         <img src="{{ url_for('static', filename='images/luxuryhomepage.jpg') }}" alt="Luxury Suite">
         <h3>Luxury Suite</h3>
         <p>King bed • Sea view • Jacuzzi</p>
-        <button onclick="window.location.href='luxury.html'">See More </button>
+        <button onclick="window.location.href='/room/1';">See More </button>
       </div>
       <div class="room-tile">
         <img src="{{ url_for('static', filename='images/deluxehomepage.jpg') }}" alt="Deluxe Room">
         <h3>Deluxe Room</h3>
         <p>Double bed • Free WiFi • Balcony</p>
-        <button onclick="window.location.href='deluxe.html'">See More</button>
+        <button onclick="window.location.href='/room/2';">See More</button>
       </div>
       <div class="room-tile">
         <img src="{{ url_for('static', filename='images/standeredhomepage.jpg') }}" alt="Standard Room">
         <h3>Standard Room</h3>
         <p>AC • TV • Breakfast included</p>
-        <button onclick="window.location.href='standered.html'">See More</button>
+        <button onclick="window.location.href='/room/3';">See More</button>
       </div>
     </div>
   </section>
