--- a/templates/room.html
+++ b/templates/room.html
@@ -50,6 +50,11 @@
                 {% if "TV" in amenity %}<div class="ico">TV</div>{% endif %}
                 {% if "Bath" in amenity %}<div class="ico">🛁</div>{% endif %}
                 {% if "Desk" in amenity %}<div class="ico">🛋️</div>{% endif %}
+                {% if "Work desk" in amenity %}<div class="ico">🖥️</div>{% endif %}
+                {% if "Laundry service" in amenity %}<div class="ico">🪣</div>{% endif %}
+                {% if "Espresso machine" in amenity %}<div class="ico">♨️</div>{% endif %}
+                {% if "Room service" in amenity %}<div class="ico">🛎️</div>{% endif %}
+                
                 <small>{{ amenity }}</small>
               </div>
             {% endfor %}
