--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
 
   <div class="signup-container">
     <h2>Create Account</h2>
-    <form action="/signup" method="POST">
+    <form action="/signup" method="POST" onsubmit="return confirm('Account Created Successfully. Login to Continue');">
       <label for="username">Username</label>
       <input type="text" name="username" id="username" placeholder="Enter Username" required>
 
